<resources>
    <string name="app_name">NASA Pictures</string>
    <string name="title">Title</string>
    <string name="title_text">Title Text</string>
    <string name="explanation">Explanation</string>
    <string name="expalnation_text">Expalnation Text</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_text">Copyright Text</string>
    <string name="date">Date</string>
    <string name="date_text">Date Text</string>
</resources>
